css/style.css
:root {
  font-size: 110%;
  line-height: 1.3;
  font-family: "GerstnerProgWebRegular";
  text-rendering: optimizeLegibility;
  --red: rgb(204 51 51);
  --header-fg: white;
  --header-bg: black;
  --white: #fff;
  --black: #281e1e;
}

body {
  color: var(--white);
  background: var(--black); 
}

div#content {
  /* container for header, main and footer
  mainly for background against rodeo-pic
  */
  padding: 0;
  background: var(--black);
  margin-top: var(--content-margin-top);
  position: relative;
  width: 100%;
}

aside#rodeo-pic {
  height: 100vh; /* fallback */
  height: var(--rodeo-pic-height);
  background: url(/assets/img/rodeo.jpg);
  background-size: cover;
  background-position: top center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  margin: 0;
}

header,
main,
footer {
  background: var(--black);
  position: relative;
  padding: 0 1rem 0;
}

header {
  padding: 0;
  background: var(--header-bg);
  width: 100%;
  box-sizing: border-box;
  display: grid;
  grid-template-columns: 1fr auto;
}

#content.got-to-top {
  position: absolute;
  top: 0;
  padding-top: var(--header-height);
  margin: 0;
}

.got-to-top header {
  position: fixed;
  top: 0;
  z-index: 100;
}
.got-to-top main {
  position: relative;
  top: var(--header-height);
  top: 0;
}

header #header-logo {
  /* background: var(--black); */
  background: var(--header-bg);
}
header #header-logo rect,
header #header-logo path {
  fill: var(--header-fg);
}

/* .scrolling-up { top:  0; } */
/* .scrolling-down { top: -300px; } */
header img {
  grid-column: 1/-1;
  grid-row: 1;
}

header h1 {
  transform: translateY(-1000px);
  display: none;
  font-size: 2rem;
  color: var(--red);
  font-family: "GerstnerProgWebMedium";
  margin: 0;
}

header a {
  text-decoration: none;
}

a {
  color: unset;
}

.deutsch {
  /* default: english */
  display: none;
}

#language-switch {
  display: inline-block;
  padding: 0 1rem;
  align-self: center;
  text-align: right;
  grid-column: 2/-1;
  grid-row: 1;
  position: relative;
  top: 0.25rem;
  cursor: pointer;
  color: var(--header-fg);
  transform: translateY(-0.15rem);
}

#language-selection {
  margin: 0;
}
#language-selection a {
  display: none;
}
#language-selection a.active {
  display: inline-block;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
ul,
ol,
blockquote {
  margin-bottom: 1.5rem;
}

ul,
ol {
  padding-left: 0.875rem;
}

.upper {
  text-transform: uppercase;
}

.no-list {
  list-style: none;
  padding: 0;
}

h2 {
  font-family: "GerstnerProgWebMedium";
  font-size: 0.75rem;
  text-transform: uppercase;
  font-feature-settings: "cpsp" on, "case" on;
  border-top: var(--red) solid 1px;
  margin-top: 3.6rem;
  padding-top: 0.3rem;
  letter-spacing: 0.05rem;
  /* color: var(--white); */
  color: var(--red);
}

p,
li {
  letter-spacing: 0.025rem;
}

em,
i {
  font-family: "GerstnerProgWebItalic";
}

.spaced-out {
  letter-spacing: 0.25rem;
}
.centered {
  text-align: center;
}

.lead {
  border-top: 1px solid var(--red);
  padding-top: 1rem;
  font-size: 1.25rem;
  line-height: 1.2;
  color: var(--red);
  text-align: center;
}

p + .lead,
ul + .lead {
  padding-top: 2rem;
}

.partner-list {
  font-size: 1.25rem;
  line-height: 1.2;
  color: var(--red);
}

h2 + .lead,
h2 + .partner-list {
  border-top: none;
  padding-top: 0;
}

footer,
.small {
  font-size: 0.75rem;
  line-height: 1.3;
  letter-spacing: 0.05rem;
}

footer {
  padding-bottom: var(--slider-height);
}

footer #footer-links {
  font-size: 1rem;
  display: flex;
  justify-content: space-between;
}

.inline-icon {
  height: 1.25rem;
  width: auto;
  display: inline;
  margin-right: 0.25rem;
  border: none;
  position: relative;
  top: 0.25rem;
}

footer a {
  text-decoration: none;
}

.download-button-link {
  box-sizing: border-box;
  display: inline-block;
  width: 100%;
  border: 1px solid var(--white);
  border-radius: 0.5rem;
  padding: 0.3rem 0 0.3rem;
  margin: 0 auto 2rem;
}
#download-button {
  text-align: center;
  font-size: 1.5rem;
  line-height: 1.5;
  margin: 0;
}

#examples { /* Bild-Leiste */
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  z-index: 100;
  transform: translateY(var(--examples-offset));
  transition: transform 0.4s ease-in;
  opacity: 0;
}

.got-to-top #examples { /* show slider when header hits top */
  transform: translateY(0);
  display: block;
  opacity: 1;
}

#slider {
  margin: 0;
  position: fixed;
  bottom: 0;
  left: 0;
  /* min-height: 17vh; fallback */
  height: calc(var(--slider-height) + 1.25rem); /* account for borders */
  max-width: 100%;
  overflow-x: hidden;
  display: flex;
  /* border-top: 0.75rem solid var(--black); */
  /* border-top: 1px solid white; */
  background: var(--black);
}

.slider-item {
  /*min-width: 30vw;*/ /* bestimmt Höhe! */
  /* abgeschaltet 20. juni, weil breitformate angeschnitten */
  /* dafür springts jetzt */
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  border-right: 0.75rem solid var(--black);
  border-bottom: 0.75rem solid var(--black);
}

img { /* preserve aspect ratio */
  width: 100%;
  height: auto;
  width: var(--img-width);
  height: var(--img-height);
}

img.landscape {
 border: 1px solid red;
}

aside#desktop-nothing {
  display: none;
}

@media (min-width: 800px) {
  body {
    background: none;
    height: 100vh;
  }

  aside#rodeo-pic,
  header,
  main,
  footer,
  #examples {
    display: none;
  }

  div#content {
    margin-top: 0;
  }

  aside#desktop-nothing {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
    width: 100vw;
    background: var(--red);
    position: absolute;
    top: 0;
    left: 0;
    font-size: 200%;
  }
  aside#desktop-nothing #qr-code {
    display: inline-block;
    transform-origin: center;
    transform: rotate(45deg);
    width: 25vw;
    height: 25vw;
    margin-bottom: 5rem;
  }

  aside#desktop-nothing #wortmarke {
    width: 30vw;
    transform: translateX(1.5vw);
  }
  aside#desktop-nothing #desktop-logo path {
    fill: var(--black);
  }
}

